examples/test/testpolicy3323.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3323
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key1: value20
      key23: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value32
          key5: value45
          key26: value35
      podSelector:
        matchLabels:
          key20: value30
